<resources>
  <string name="app_name">jpword</string>

  <string name="today_word">今日单词</string>
  <string name="add_word">添加新词</string>
  <string name="word_library">我的词库</string>

  <string name="chinese_input">请输入中文含义:</string>
  <string name="japanese_input">请输入日文含义:</string>
  <string name="announce_input">请输入平假名发音:</string>
  <string name="hint_chinese_meaning">中文</string>
  <string name="hint_japanese_meaning">日文</string>
  <string name="hint_announce">平假名</string>

  <string name="select_library">选择词库</string>
  <string name="import_library">导入词库</string>
  <string name="delete_library">删除词库</string>
  <string name="export_library">导出词库</string>

  <string name="commit">提交</string>
  <string name="undo_last_word">删除上一个</string>
  <string name="cancel_undo">撤销删除</string>

  <string name="title_activity_add_word">AddWordActivity</string>
  <string name="title_activity_library_manage">LibraryManageActivity</string>
  <string name="title_activity_common_fullscreen">CommonFullscreenActivity</string>
</resources>
