<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#0099cc"
  tools:context="com.cynb.jpword.activity.MenuActivity">

  <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
  <RelativeLayout
    android:id="@+id/menu_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:id="@+id/button_pos1"
      android:layout_above="@+id/button_pos5"
      android:layout_marginLeft="10dp"
      android:layout_marginStart="10dp"
      android:layout_marginBottom="50dp"
      android:background="@drawable/lib_btn_selector"
      android:text="@string/today_word"
      android:textColor="@color/colorMikan"
      android:textStyle="bold"
      android:paddingTop="80dp"
      />
    <Button
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:id="@+id/button_pos2"
      android:layout_above="@+id/button_pos5"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="50dp"
      android:background="@drawable/lib_btn_selector"
      android:text="@string/add_word"
      android:textColor="@color/colorYou"
      android:textStyle="bold"
      android:paddingTop="80dp"
      />
    <Button
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:id="@+id/button_pos3"
      android:layout_above="@+id/button_pos5"
      android:layout_alignParentRight="true"
      android:layout_alignParentEnd="true"
      android:layout_marginRight="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="50dp"
      android:background="@drawable/lib_btn_selector"
      android:text="@string/word_library"
      android:textColor="@color/colorRiko"
      android:textStyle="bold"
      android:paddingTop="80dp"
      />
    <Button
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:id="@+id/button_pos4"
      android:layout_centerVertical="true"
      android:layout_marginLeft="10dp"
      android:layout_marginStart="10dp"
      android:layout_marginBottom="50dp"
      android:background="@drawable/lib_btn_selector"
      />
    <Button
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:id="@+id/button_pos5"
      android:layout_centerInParent="true"
      android:background="@drawable/lib_btn_selector"
      />
    <Button
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:id="@+id/button_pos6"
      android:layout_centerVertical="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentEnd="true"
      android:layout_marginRight="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="50dp"
      android:background="@drawable/lib_btn_selector"
      />

  </RelativeLayout>

</RelativeLayout>
